change some cood

--- a/fainal.html
+++ b/fainal.html
@@ -33,8 +33,8 @@
         </div>
    
     </section>
-    <hr color=" gold" width="100%"> 
-    <section id="ff" class="experience-area">
+    <hr color="white" width="100%"> 
+    <section  class="experience-area">
         <h2 id="exp">Experiences</h2>
         <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Dev</h2>
@@ -50,6 +50,6 @@
     <footer>
         <p>© Mehedi 2021, all rights reserved.</p>
     </footer>
-    <hr color=" gold" width="100%"> 
+    <hr color="white" width="100%"> 
 </body>
 </html>
