--- a/fainal.html
+++ b/fainal.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>www.mehedi.com</title>
     
-    <link rel="stylesheet" href="fainal.css">
+    <link rel="stylesheet" href="fainal.css"> 
+    <link rel="shortcut icon" href="img/FB_IMG_16006749906147266.jpg" type="image/x-icon">
 </head>
 <body>
     <section class="top-banner">
